--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,13 @@
 .App-link {
   color: #61dafb;
 }
+
+table.chart {
+  margin-left: 25%;
+  margin-right: 25%;
+}
+
+td {
+  border: 1px solid black;
+  padding: 5px;
+}
