--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,14 @@ div.chart {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(7, 1fr);
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.vegetable {
+  border: 1px solid black;
+  padding: 5px;
+  margin: -5px;
 }
 
 .spring {
